--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@icons-pack/react-simple-icons": "^9.2.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "bootstrap": "^5.3.2",
