--- a/package.json
+++ b/package.json
@@ -22,16 +22,22 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "bootstrap": "^5.3.2",
+    "katex": "^0.16.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-d3-tree": "^3.6.1",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.19.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-katex": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "serve": "^14.2.1"
   },
   "devDependencies": {
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "@vitejs/plugin-react": "^1.3.2",
