--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@icons-pack/react-simple-icons": "^9.2.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "bibtex": "^0.9.0",
     "bootstrap": "^5.3.2",
     "katex": "^0.16.9",
     "react": "^18.2.0",
@@ -31,8 +32,10 @@
     "react-router-dom": "^6.19.0",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-katex": "^7.0.0",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
+    "remark-supersub": "^1.0.0",
     "serve": "^14.2.1"
   },
   "devDependencies": {
