--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "bibtex": "^0.9.0",
     "bootstrap": "^5.3.2",
     "katex": "^0.16.9",
+    "lowlight": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-d3-tree": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.19.0",
-    "react-syntax-highlighter": "^15.5.0",
+    "rehype-highlight": "^7.0.0",
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
