--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@icons-pack/react-simple-icons": "^9.2.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "axios": "^1.6.7",
     "bibtex": "^0.9.0",
     "bootstrap": "^5.3.2",
+    "evergreen-ui": "^7.1.9",
     "katex": "^0.16.9",
     "lowlight": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-code-blocks": "^0.1.6",
     "react-d3-tree": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
@@ -42,6 +45,7 @@
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "@vitejs/plugin-react": "^1.3.2",
