--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@uiw/codemirror-theme-nord": "^4.21.22",
+    "@uiw/codemirror-theme-tokyo-night-storm": "^4.21.22",
     "@uiw/react-codemirror": "^4.21.22",
     "axios": "^1.6.7",
     "bibtex": "^0.9.0",
