--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "rehype-highlight": "^7.0.0",
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "remark-slug": "^7.0.1",
