--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lowlight": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-code-blocks": "^0.1.6",
     "react-d3-tree": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
