--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5",
-    "vite": "^2.9.12"
+    "vite": "^2.9.12",
+    "vite-plugin-string": "^1.2.3"
   },
   "license": "MIT"
 }
