--- a/package.json
+++ b/package.json
@@ -15,28 +15,14 @@
   "dependencies": {
     "@codemirror/lang-cpp": "^6.0.2",
     "@codemirror/lang-python": "^6.1.4",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@icons-pack/react-simple-icons": "^9.2.0",
-    "@mui/icons-material": "^5.15.0",
-    "@mui/material": "^5.15.0",
     "@uiw/codemirror-theme-duotone": "^4.22.0",
-    "@uiw/codemirror-theme-nord": "^4.21.22",
     "@uiw/codemirror-theme-tokyo-night-storm": "^4.21.22",
     "@uiw/react-codemirror": "^4.21.22",
-    "axios": "^1.6.7",
-    "bibtex": "^0.9.0",
     "bootstrap": "^5.3.2",
     "evergreen-ui": "^7.1.9",
     "katex": "^0.16.9",
-    "lowlight": "^3.1.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
     "react-code-blocks": "^0.1.6",
-    "react-d3-tree": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.19.0",
@@ -46,29 +32,23 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
-    "remark-slug": "^7.0.1",
-    "remark-supersub": "^1.0.0",
-    "remark-toc": "^9.0.0",
     "serve": "^14.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/react-syntax-highlighter": "^15.5.11",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5",
-    "vite": "^2.9.12",
-    "vite-plugin-string": "^1.2.3"
+    "vite": "^2.9.12"
   },
   "license": "MIT"
 }
