--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   },
   "dependencies": {
     "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-go": "^6.0.0",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-python": "^6.1.4",
+    "@codemirror/lang-rust": "^6.0.1",
     "@uiw/codemirror-theme-duotone": "^4.22.0",
     "@uiw/codemirror-theme-tokyo-night-storm": "^4.21.22",
     "@uiw/react-codemirror": "^4.21.22",
