--- a/demo-app/tsconfig.app.json
+++ b/demo-app/tsconfig.app.json
@@ -1,26 +1,27 @@
 {
   "compilerOptions": {
+    "composite": true,
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+
+    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true, 
+    "moduleDetection": "force",
+    "noEmit": true,
     "jsx": "react-jsx",
+
+    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    /* The "typeRoots" configuration specifies the locations where 
-       TypeScript looks for type definitions (.d.ts files) to 
-       include in the compilation process.*/
-    "typeRoots": ["./dist/index.d.ts", "node_modules/@types"]
+    "noFallthroughCasesInSwitch": true
   },
-  /* include /index.ts*/
-  "include": ["src", "./index.ts"],
-  // "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src"]
 }
