--- a/package.json
+++ b/package.json
@@ -1,58 +1,69 @@
 {
-  "name": "vite-reactts-eslint-prettier",
-  "version": "0.0.0",
+  "name": "notie-markdown",
+  "private": false,
+  "description": "A simple markdown note-taking app with live executable and editable code blocks.",
+  "version": "1.0.0",
+  "main": "dist/index.umd.js",
+  "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js",
+      "types": "./dist/index.d.ts",
+      "style": "./dist/style.css"
+    }
+  },
+  "files": [
+    "dist",
+    "dist/style.css"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
-    "start": "serve -s dist",
-    "heroku-postbuild": "npm run build",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview",
-    "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
-    "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
-    "lint": "yarn lint:format && yarn lint:fix ",
-    "type-check": "tsc"
+    "build": "tsc -b && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@codemirror/lang-cpp": "^6.0.2",
-    "@codemirror/lang-go": "^6.0.0",
+    "@codemirror/lang-go": "^6.0.1",
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.2",
-    "@codemirror/lang-python": "^6.1.4",
+    "@codemirror/lang-python": "^6.1.6",
     "@codemirror/lang-rust": "^6.0.1",
-    "@uiw/codemirror-theme-duotone": "^4.22.0",
-    "@uiw/codemirror-theme-tokyo-night-storm": "^4.21.22",
-    "@uiw/react-codemirror": "^4.21.22",
-    "bootstrap": "^5.3.2",
+    "@codemirror/language": "^6.10.2",
+    "@types/node": "^22.1.0",
+    "@uiw/codemirror-theme-duotone": "^4.23.0",
+    "@uiw/codemirror-theme-tokyo-night-storm": "^4.23.0",
+    "@uiw/react-codemirror": "^4.23.0",
+    "bootstrap": "^5.3.3",
     "evergreen-ui": "^7.1.9",
-    "katex": "^0.16.9",
-    "react": "^18.2.0",
+    "katex": "^0.16.11",
+    "react": "^18.3.1",
     "react-code-blocks": "^0.1.6",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.19.0",
     "rehype-highlight": "^7.0.0",
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
-    "serve": "^14.2.1"
+    "vite-plugin-css-injected-by-js": "^3.5.1",
+    "vite-plugin-dts": "^4.0.0-beta.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
-    "@vitejs/plugin-react": "^1.3.2",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.5",
-    "vite": "^2.9.12"
-  },
-  "license": "MIT"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "typescript": "^5.2.2",
+    "vite": "^5.3.4"
+  }
 }
