--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,8 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/demo-app/$1"
+      "src": "/demo-app/(.*)",
+      "dest": "/demo-app/index.html"
     }
   ]
 }
