--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   "routes": [
     {
       "src": "/demo-app/(.*)",
-      "dest": "/demo-app/index.html"
+      "dest": "/demo-app/$1"
     }
   ]
 }
