--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,8 @@
   ],
   "rewrites": [
     {
-      "source": "/demo-app/(.*)",
-      "destination": "/demo-app"
+      "source": "/(.*)",
+      "destination": "/demo-app/index.html"
     }
   ]
 }
