--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "publishConfig": {
     "access": "public"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/branyang02/notie"
+  },
   "scripts": {
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -41,6 +45,7 @@
     "bootstrap": "^5.3.3",
     "evergreen-ui": "^7.1.9",
     "katex": "^0.16.11",
+    "npm-version-git": "^2.2.1",
     "react": "^18.3.1",
     "react-code-blocks": "^0.1.6",
     "react-dom": "^18.3.1",
