--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,10 +22,21 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Determine version bump
+        id: version_bump
+        run: |
+          if [[ "${{ github.event.head_commit.message }}" =~ ^fix ]]; then
+            echo "bump=patch" >> $GITHUB_ENV
+          elif [[ "${{ github.event.head_commit.message }}" =~ ^feat ]]; then
+            echo "bump=minor" >> $GITHUB_ENV
+          elif [[ "${{ github.event.head_commit.message }}" =~ BREAKING[[:space:]]CHANGE ]]; then
+            echo "bump=major" >> $GITHUB_ENV
+          else
+            echo "bump=patch" >> $GITHUB_ENV
+          fi
+
       - name: Bump version
-        run: npx npm-version-git
-        env:
-          GIT_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
+        run: npm version ${{ env.bump }} --no-git-tag-version
 
       - name: Build the package
         run: npm run build
@@ -39,4 +50,6 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git push origin HEAD:main --follow-tags
+          git add package.json
+          git commit -m "ci: bump version to ${{ steps.version_bump.outputs.new_version }}"
+          git push origin HEAD:main
