--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,3 +56,5 @@ jobs:
           git add package.json
           git commit -m "ci: bump version to ${{ steps.version_bump.outputs.new_version }}"
           git push origin HEAD:main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
