--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "notie-markdown",
   "private": false,
   "description": "A simple markdown note-taking app with live executable and editable code blocks.",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
+  "homepage": "https://notie-nine.vercel.app",
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
