--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,4 +57,4 @@ jobs:
           git commit -m "ci: bump version to ${{ steps.version_bump.outputs.new_version }}"
           git push origin HEAD:main
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
