--- a/demo-app/package.json
+++ b/demo-app/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "notie-markdown": "^1.0.0",
+    "notie-markdown": "file:..",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0"
