fix: live vercel preview install command

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "installCommand": "cd demo-app && npm install",
+  "installCommand": "npm install && npm run build && cd demo-app && npm install",
   "buildCommand": "cd demo-app && npm run build",
   "outputDirectory": "demo-app/dist",
   "rewrites": [
