--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "scripts": {
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev": "vite"
   },
   "dependencies": {
     "@codemirror/lang-cpp": "^6.0.2",
