--- a/package.json
+++ b/package.json
@@ -1,75 +1,78 @@
 {
-  "name": "notie-markdown",
-  "private": false,
-  "description": "A simple markdown note-taking app with live executable and editable code blocks.",
-  "version": "1.0.12",
-  "main": "dist/index.umd.js",
-  "module": "dist/index.es.js",
-  "types": "dist/index.d.ts",
-  "homepage": "https://notie-nine.vercel.app",
-  "exports": {
-    ".": {
-      "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js",
-      "types": "./dist/index.d.ts",
-      "style": "./dist/style.css"
+    "name": "notie-markdown",
+    "private": false,
+    "description": "A simple markdown note-taking app with live executable and editable code blocks.",
+    "version": "1.0.12",
+    "main": "dist/index.umd.js",
+    "module": "dist/index.es.js",
+    "types": "dist/index.d.ts",
+    "homepage": "https://notie-nine.vercel.app",
+    "exports": {
+        ".": {
+            "import": "./dist/index.es.js",
+            "require": "./dist/index.umd.js",
+            "types": "./dist/index.d.ts",
+            "style": "./dist/style.css"
+        }
+    },
+    "files": [
+        "dist",
+        "dist/style.css"
+    ],
+    "publishConfig": {
+        "access": "public"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/branyang02/notie"
+    },
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "format": "prettier --write .",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@codemirror/lang-cpp": "^6.0.2",
+        "@codemirror/lang-go": "^6.0.1",
+        "@codemirror/lang-java": "^6.0.1",
+        "@codemirror/lang-javascript": "^6.2.2",
+        "@codemirror/lang-python": "^6.1.6",
+        "@codemirror/lang-rust": "^6.0.1",
+        "@codemirror/language": "^6.10.2",
+        "@types/node": "^22.1.0",
+        "@uiw/codemirror-theme-duotone": "^4.23.0",
+        "@uiw/codemirror-theme-tokyo-night-storm": "^4.23.0",
+        "@uiw/react-codemirror": "^4.23.0",
+        "bootstrap": "^5.3.3",
+        "evergreen-ui": "^7.1.9",
+        "katex": "^0.16.11",
+        "react": "^18.3.1",
+        "react-code-blocks": "^0.1.6",
+        "react-dom": "^18.3.1",
+        "react-markdown": "^9.0.1",
+        "rehype-highlight": "^7.0.0",
+        "rehype-katex": "^7.0.0",
+        "rehype-raw": "^7.0.0",
+        "rehype-slug": "^6.0.0",
+        "remark-gfm": "^4.0.0",
+        "remark-math": "^6.0.0",
+        "vite-plugin-css-injected-by-js": "^3.5.1",
+        "vite-plugin-dts": "^4.0.0-beta.2"
+    },
+    "devDependencies": {
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@typescript-eslint/eslint-plugin": "^7.15.0",
+        "@typescript-eslint/parser": "^7.15.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "eslint": "^8.57.0",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-react-refresh": "^0.4.7",
+        "prettier": "^3.3.3",
+        "prettier-plugin-organize-imports": "^4.0.0",
+        "typescript": "^5.2.2",
+        "vite": "^5.3.4"
     }
-  },
-  "files": [
-    "dist",
-    "dist/style.css"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/branyang02/notie"
-  },
-  "scripts": {
-    "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "dev": "vite"
-  },
-  "dependencies": {
-    "@codemirror/lang-cpp": "^6.0.2",
-    "@codemirror/lang-go": "^6.0.1",
-    "@codemirror/lang-java": "^6.0.1",
-    "@codemirror/lang-javascript": "^6.2.2",
-    "@codemirror/lang-python": "^6.1.6",
-    "@codemirror/lang-rust": "^6.0.1",
-    "@codemirror/language": "^6.10.2",
-    "@types/node": "^22.1.0",
-    "@uiw/codemirror-theme-duotone": "^4.23.0",
-    "@uiw/codemirror-theme-tokyo-night-storm": "^4.23.0",
-    "@uiw/react-codemirror": "^4.23.0",
-    "bootstrap": "^5.3.3",
-    "evergreen-ui": "^7.1.9",
-    "katex": "^0.16.11",
-    "react": "^18.3.1",
-    "react-code-blocks": "^0.1.6",
-    "react-dom": "^18.3.1",
-    "react-markdown": "^9.0.1",
-    "rehype-highlight": "^7.0.0",
-    "rehype-katex": "^7.0.0",
-    "rehype-raw": "^7.0.0",
-    "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.0",
-    "remark-math": "^6.0.0",
-    "vite-plugin-css-injected-by-js": "^3.5.1",
-    "vite-plugin-dts": "^4.0.0-beta.2"
-  },
-  "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.4"
-  }
 }
