--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,11 +42,9 @@ jobs:
         id: bump_version
         run: |
           npm version ${{ env.bump }} --no-git-tag-version
+          npm install --package-lock-only  # Update package-lock.json with the new version
           NEW_VERSION=$(node -p "require('./package.json').version")
           echo "new_version=$NEW_VERSION" >> $GITHUB_ENV
-
-      - name: Update package-lock.json
-        run: npm install
 
       - name: Build the package
         run: npm run build
@@ -60,7 +58,7 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add package.json
+          git add package.json package-lock.json
           git commit -m "ci: bump version to ${{ env.new_version }}"
           git push origin HEAD:main
         env:
