--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,13 @@
     "trailingComma": "all",
     "tabWidth": 4,
     "semi": true,
-    "singleQuote": false
+    "singleQuote": false,
+    "overrides": [
+        {
+            "files": "*.md",
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ]
 }
