--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
         "evergreen-ui": "^7.1.9",
         "katex": "^0.16.11",
         "react": "^18.3.1",
-        "react-code-blocks": "^0.1.6",
         "react-dom": "^18.3.1",
         "react-markdown": "^9.0.1",
+        "react-syntax-highlighter": "^15.5.0",
         "rehype-katex": "^7.0.0",
         "rehype-raw": "^7.0.0",
         "rehype-slug": "^6.0.0",
@@ -62,6 +62,7 @@
     "devDependencies": {
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@types/react-syntax-highlighter": "^15.5.13",
         "@typescript-eslint/eslint-plugin": "^7.15.0",
         "@typescript-eslint/parser": "^7.15.0",
         "@vitejs/plugin-react": "^4.3.1",
