--- a/demo-app/package.json
+++ b/demo-app/package.json
@@ -10,6 +10,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.13.0",
+        "@emotion/styled": "^11.13.0",
+        "@mui/material": "^5.16.7",
+        "@mui/x-charts": "^7.13.0",
         "notie-markdown": "file:..",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
