--- a/demo-app/package.json
+++ b/demo-app/package.json
@@ -14,31 +14,20 @@
         "@emotion/styled": "^11.13.0",
         "@mui/material": "^5.16.7",
         "@mui/x-charts": "^7.13.0",
-        "@radix-ui/react-slot": "^1.1.0",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.1",
-        "lucide-react": "^0.428.0",
         "notie-markdown": "file:..",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^6.26.0",
-        "recharts": "^2.12.7",
-        "tailwind-merge": "^2.5.2",
-        "tailwindcss-animate": "^1.0.7"
+        "react-router-dom": "^6.26.0"
     },
     "devDependencies": {
-        "@types/node": "^22.4.0",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@typescript-eslint/eslint-plugin": "^7.15.0",
         "@typescript-eslint/parser": "^7.15.0",
         "@vitejs/plugin-react": "^4.3.1",
-        "autoprefixer": "^10.4.20",
         "eslint": "^8.57.0",
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.7",
-        "postcss": "^8.4.41",
-        "tailwindcss": "^3.4.10",
         "typescript": "^5.2.2",
         "vite": "^5.3.4"
     }
