--- a/demo-app/tsconfig.app.json
+++ b/demo-app/tsconfig.app.json
@@ -21,14 +21,7 @@
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true,
-
-        "baseUrl": ".",
-        "paths": {
-          "@/*": [
-            "./src/*"
-          ]
-        }
+        "noFallthroughCasesInSwitch": true
     },
     "include": ["src"]
 }
