--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,6 +43,7 @@ jobs:
         run: |
           npm version ${{ env.bump }} --no-git-tag-version
           npm install --package-lock-only  # Update package-lock.json with the new version
+          cd demo-app && npm install --package-lock-only && cd .. # Update package-lock.json in demo-app
           NEW_VERSION=$(node -p "require('./package.json').version")
           echo "new_version=$NEW_VERSION" >> $GITHUB_ENV
 
