--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/branyang02/notie"
+        "url": "git+https://github.com/branyang02/notie.git"
     },
     "scripts": {
         "dev": "vite",
